Creates Rome Forecast website

--- a/final-example.html
+++ b/final-example.html
@@ -12,10 +12,12 @@
     />
   </head>
   <body>
-    <h1 class="text-center">Rubrica utenti</h1>
+    <h1 class="text-center">Temperature Min&Max a Roma</h1>
     <main>
       <div class="container mt-4">
-        <div class="row"></div>
+        <div class="row justify-content-center">
+          <div class="col col-12 col-md-6 text-center" id="main-col"></div>
+        </div>
       </div>
       <div class="d-flex justify-content-center" id="spinner-container">
         <div class="spinner-border text-success" role="status">
@@ -28,6 +30,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <script src="fetch.js"></script>
+    <script src="final-example.js"></script>
   </body>
 </html>
